# kaggle-Learning-Equality-Curriculum-Recommendations

./: README.md  pyproject.toml
conf/base/: catalog.yml  logging.yml  parameters.yml
docs/source/: conf.py  index.rst
notebooks/kaggle-scripts/: LECR-stsb_roberta_base.py
src/: setup.py
src/curriculum_recommendations/: __init__.py  __main__.py  settings.py
src/curriculum_recommendations/pipelines/data_prep/: nodes.py  pipeline.py  torch_embeddings.py
src/tests/: test_run.py
src/tests/pipelines/data_prep/: test_pipeline.py
