[tool.poetry]
name = "kaggle-Learning-Equality-Curriculum-Recommendations"
version = "0.1.0"
description = ""
authors = ["bertrand <bertrand.gallice.pro@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.9.0,<3.10"
kedro = "^0.18.4"
pandas = "^1.5.3"
numpy = "^1.24.2"
torch = "^1.13.1"
transformers = "^4.26.0"
sentence-transformers = "^2.2.2"
pytest-cov = "^4.0.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.kedro]
package_name = "curriculum_recommendations"
project_name = "Curriculum Recommendations"
project_version = "0.18.4"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/curriculum_recommendations -ra
"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
